---
source: book/tests/snapshot.rs
expression: "from e=employees\njoin salaries [==emp_no]\ngroup [e.emp_no, e.gender] (\n  aggregate [\n    emp_salary = average salaries.salary\n  ]\n)\njoin de=dept_emp [==emp_no] side:left\ngroup [de.dept_no, gender] (\n  aggregate [\n    salary_avg = average emp_salary,\n    salary_sd = stddev emp_salary,\n  ]\n)\njoin departments [==dept_no]\nselect [dept_name, gender, salary_avg, salary_sd]\n"
---
from e = employees
join salaries [==emp_no]
group [
  e.emp_no,
  e.gender,
] (
  aggregate [emp_salary = average salaries.salary]
)
join side:left de = dept_emp [==emp_no]
group [
  de.dept_no,
  gender,
] (
  aggregate [
  salary_avg = average emp_salary,
  salary_sd = stddev emp_salary,
]
)
join departments [==dept_no]
select [
  dept_name,
  gender,
  salary_avg,
  salary_sd,
]



